app/styles/app.css
body {
  font-family: 'Open Sans', sans-serif;
  color: #4d4d4d;
  font-size: 14px;
  line-height: 1.42857143;
}

.title {
  font-family: 'Raleway', sans-serif;
  font-weight: 900;
}

/*navbar*/

.navbar-default {
  background-color: #fff;
  border-color: #fff;
}

.nav-bar-image {
  height: 30px;
  overflow: hidden;
}

/*header*/

.jumbotron h1 {
  font-family: 'Raleway', sans-serif;
  text-align: center;
  width: 100%;
  padding-left: 15px;
  padding-right: 15px;
  font-size: 30px!important;
  line-height: 50px;
  color: #fff;
  font-weight: 900;
  /*margin: 0 auto;*/
}

.jumbotron p {
  font-family: 'Raleway', sans-serif;
  text-align: center;
  width: 100%;
  padding-left: 15px;
  padding-right: 15px;
  font-size: 20px!important;
  line-height: 40px;
  color: #fff;
  font-weight: 900;
  /*margin: 0 auto;*/
}

.jumbotron {
  background: url(http://masterbranch.com/images/developers-image.jpg) 50% no-repeat;
  background-size: cover;
  margin-top: -20px;
  padding: 100px 0;
}

.search-form {
  text-align: center;
  padding-left: 15px;
  padding-right: 15px;
  color: #fff;
}

.footer {
  background-color: #1c1c1c;
  border-top: 4px solid #368dc9;
  padding: 40px 0;
  color: #fff;
}

/*display results*/

.results {
  padding-bottom: 30px;
}

